--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,19 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.flightsbookingapp">
+
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:windowSoftInputMode="adjustResize"
         android:theme="@style/Theme.FlightsBookingApp">
-        <activity android:name=".booking"></activity>
-        <activity android:name=".register"></activity>
+        <activity android:name=".activity_lost_connection"></activity>
+
+        <receiver
+            android:name=".inter_receiver"
+            android:enabled="false"
+            android:exported="false" />
+
+        <activity android:name=".activity_customer_cart" />
+        <activity android:name=".Activity_cus_flights" />
+        <activity android:name=".activity_edit_all_flights" />
+        <activity android:name=".booking"
+            android:windowSoftInputMode="adjustResize"/>
+        <activity android:name=".register" />
+        <activity android:name=".custlogin" />
+        <activity android:name=".managerlogin" />
+        <activity android:name=".manager_register" />
+        <activity android:name=".manager_activity" />
+        <activity android:name=".FlightDetails" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
