--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jan 05 19:09:46 IST 2021
-sdk.dir=C\:\\Users\\cheer\\AppData\\Local\\Android\\Sdk
+#Mon Jan 11 22:12:33 IST 2021
+sdk.dir=C\:\\Users\\Aseel Nemer\\AppData\\Local\\Android\\Sdk
